force-app/main/default/objects/TLG_Team_Status__c/TLG_Team_Status__c.object-meta.xml
<CustomObject>
    <label>Team Status</label>
    <nameField>
        <label>TS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>