force-app/main/default/objects/TLG_Team_Status__c/fields/TLG_Team__c.field-meta.xml
<CustomField>
    <fullName>TLG_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>TLG_Team__c</referenceTo>
    <relationshipLabel>Team Statuses</relationshipLabel>
    <relationshipName>Team_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>